# bayes-anomaly

./: .buildinfo  .gitignore  CHANGELOG.md  README.html  README.md  bhad.html  bhad_modules.html  docs.yml  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: README.doctree  bhad.doctree  bhad_modules.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
.doctrees/notebooks/: Titanic_Example.doctree  Toy_Example.doctree
.github/workflows/: create_docs.yml  formatter.yml  publish.yml  publish_test.yml  tests.yml
_sources/: bhad.rst.txt  installation.rst.txt  introduction.rst.txt  usage.md.txt
docs/: Makefile  perf.md
docs/source/: bhad.rst  bhad_modules.rst  conf.py  index.rst  installation.rst  introduction.rst  usage.md
notebooks/: Titanic_Example.html  Toy_Example.html
scripts/: bench.py
src/bhad/: explainer.py  model.py  utils.py
src/notebooks/: Titanic_Example.ipynb  Toy_Example.ipynb
tests/: golden_decision_function.npz
tests/test_explainer/: test_explainer.py
tests/test_model/: test_bhad.py  test_golden.py
tests/test_utils/: test_utilize.py
