[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# https://pypi.org/project/bhad
[project]
name = "bhad"
version = "0.2.6"
description = "Bayesian Histogram-based Anomaly Detection"
requires-python = ">=3.12,<3.13"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Alexander Vosseler" }
]
maintainers = [
  { name = "Alexander Vosseler" }
]

keywords = ["bayesian-inference", "anomaly-detection", "unsupervised-learning", "explainability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Note these updated constraints:
dependencies = [
  "pandas==1.5.*",
  "scikit-learn==1.3.*",
  "matplotlib==3.*",
  "statsmodels==0.14.*",
  "scipy>=1.9,<2.0",
  "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "ipykernel",
  "pytest",
  "sphinx==8.2.*",
  "sphinx_rtd_theme==3.*",
  "myst-parser==4.*",
  "black",
  "isort",
  "mypy",
  "nbsphinx==0.9.*",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bhad*"]


[project.urls]
homepage = "https://github.com/AVoss84/bhad"
repository = "https://github.com/AVoss84/bhad"
issues = "https://github.com/AVoss84/bhad/issues"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests"
]
